fix: dark mode

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -86,6 +86,10 @@
 
 /* Page */
 
+.nav {
+  transition: .314s;
+}
+
 body {
   font-family: sans-serif;
   margin: 0;
